@@ -2,7 +2,7 @@
     <dataSource type="BinFileDataSource" />
     <document>
         <entity name="tika-test" processor="TikaEntityProcessor"
-                url="../contrib/extraction/src/test-files/extraction/solr-word.pdf" format="text">
+                url="exampledocs/solr-word.pdf" format="text">
                 <field column="Author" name="author" meta="true"/>
                 <field column="title" name="title" meta="true"/>
                 <field column="text" name="text"/>
